fix gallery padding to align with bottom box

--- a/scss/branding_page/_gallery_article.scss
+++ b/scss/branding_page/_gallery_article.scss
@@ -72,6 +72,10 @@
     padding: 0;
     overflow: hidden;
 
+    .container {
+      padding: 0;
+    }
+
     /* galleryTop */
     .gallery {
       display: flex;
